--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,17 @@
-#spring.datasource.url=jdbc:mysql://localhost:8080/flowershop
-#spring.datasource.username=root
-#spring.datasource.password=colabola123
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.MySQLLegacyDialect
-
-#hostname=ftp-202336.srv.hoster.ru
-
+spring.datasource.url=jdbc:mysql://mysql-202336.srv.hoster.ru/srv202336_admin
+spring.datasource.username=srv202336_admin
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/flowershop
-spring.datasource.username=root
-spring.datasource.password=colabola123
-#spring.jpa.show-sql: true
-
+spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/flowershop
+#spring.datasource.username=root
+#spring.datasource.password=colabola123
+##spring.jpa.show-sql: true
+#
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
