--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,8 @@
-spring.datasource.url=jdbc:mysql://mysql-202336.srv.hoster.ru/srv202336_admin
-spring.datasource.username=srv202336_admin
-spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=Create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/flowershop
+spring.datasource.username=root
+spring.datasource.password=password
+#spring.jpa.show-sql: true
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/flowershop
-#spring.datasource.username=root
-#spring.datasource.password=colabola123
-##spring.jpa.show-sql: true
-#
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
